[package]
authors = ["Raum Dellamorte <elementalsin@gmail.com>"]
name = "raum-en"
version = "0.1.0"
[dependencies]
nalgebra = "0.21.0"
ncollide3d = "0.23.0"
env_logger = "0.7.1"
gl = "0.14.0"
glutin = "0.24.0"
glsl = "4.0.3"
glsl-quasiquote = "4.0.0"
# cheddar = "0.2.1"
image = "0.23.4"
log = "0.4.8"
rand = "0.7.3"
noise = "0.6.0"
nom = "5.1.1"
num = "0.2.1"
# renderdoc-rs = "0.1.0"
specs = "0.16.1"
specs-derive = "0.4.1"
shred = "0.10.2"
shred-derive = "0.6.2"
time = "0.2.14"
