[package]
authors = ["Raum Dellamorte <elementalsin@gmail.com>"]
name = "raum-en"
version = "0.1.0"
[dependencies]
nalgebra = "0.30.1"
ncollide3d = "0.32.0"
env_logger = "0.9.0"
gl = "0.14.0"
glutin = "0.28.0"
glsl = "6.0.1"
glsl-quasiquote = "6.0.0"
# cheddar = "0.2.1"
image = "0.24.0"
lazy_static = "1.4.0"
log = "0.4.8"
rand = "0.8.4"
noise = "0.7.0"
nom = "7.1.0"
num = "0.4.0"
# renderdoc-rs = "0.1.0"
specs = "0.17.0"
specs-derive = "0.4.1"
shred = "0.12.0"
shred-derive = "0.6.2"
time = "0.3.7"
